--- a/src/layouts/MainLayout/style.module.css
+++ b/src/layouts/MainLayout/style.module.css
@@ -1,8 +1,15 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0 4rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+}
+
+.navbar {
+  padding: 1rem;
+}
+
+.navbar a {
+  margin: 0 10px;
 }
